--- a/build.gradle
+++ b/build.gradle
@@ -32,33 +32,39 @@ idea {
 }
 
 dependencies {
-    compile 'org.apache.olingo:olingo-odata2-api:2.0.+'
-    compile 'org.apache.olingo:olingo-odata2-core:2.0.+'
-    compile 'org.apache.olingo:olingo-odata2-jpa-processor-api:2.0.+'
-    compile 'org.apache.olingo:olingo-odata2-jpa-processor-core:2.0.+'
-    compile 'org.apache.olingo:olingo-odata2-jpa-processor-ref:2.0.+'
-    compile 'org.apache.olingo:olingo-odata2-api-annotation:2.0.+'
+    String olingoVersion = '2.0.+'
+    String springVersion = '4.2.+'
+    String springSecurityVersion = '4.1.0.RELEASE'
+
+    compile "org.apache.olingo:olingo-odata2-api:$olingoVersion"
+    compile "org.apache.olingo:olingo-odata2-core:$olingoVersion"
+    compile "org.apache.olingo:olingo-odata2-jpa-processor-api:$olingoVersion"
+    compile "org.apache.olingo:olingo-odata2-jpa-processor-core:$olingoVersion"
+    compile "org.apache.olingo:olingo-odata2-jpa-processor-ref:$olingoVersion"
+    compile "org.apache.olingo:olingo-odata2-api-annotation:$olingoVersion"
+    compile "org.apache.olingo:olingo-odata2-annotation-processor-core:$olingoVersion"
 //    compile 'org.apache.olingo:olingo-odata2-spring:2.0.+'
-    compile 'org.apache.olingo:olingo-odata2-annotation-processor-core:2.0.+'
 
     provided 'javax.servlet:javax.servlet-api:3.1.0'
 
-    compile 'org.springframework:spring-aop:4.2.+'
+    compile "org.springframework:spring-aop:$springVersion"
+    compile "org.springframework:spring-webmvc:$springVersion"
+    compile "org.springframework:spring-orm:$springVersion"
+    compile "org.springframework.security:spring-security-core:$springSecurityVersion"
+    compile "org.springframework.security:spring-security-web:$springSecurityVersion"
     compile 'org.aspectj:aspectjrt:1.8.+'
-    compile 'org.springframework:spring-webmvc:4.2.+'
-    compile 'org.springframework:spring-orm:4.2.+'
 
     compile 'org.eclipse.persistence:eclipselink:2.6.2'
     compile 'org.hsqldb:hsqldb:2.3.+'
     compile 'org.eclipse.persistence:javax.persistence:2.1.+'
 
-
     compile 'org.glassfish.jersey.ext:jersey-spring3:2.22.+'
     compile 'org.glassfish.jersey.media:jersey-media-json-jackson:2.22.+'
-//    compile 'org.apache.cxf:cxf-rt-frontend-jaxrs:3.1.+'
 
     compile 'org.scala-lang:scala-dist:2.11.+'
     compile 'com.typesafe.scala-logging:scala-logging_2.11:3.4.+'
     compile 'org.apache.logging.log4j:log4j-core:2.+'
+    compile 'org.apache.logging.log4j:log4j-web:2.+'
     compile 'org.apache.logging.log4j:log4j-slf4j-impl:2.+'
+    compile 'org.apache.logging.log4j:log4j-jcl:2.+'
 }
